update: basic function work

--- a/test/index.html
+++ b/test/index.html
@@ -7,6 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <div v-model="name"></div>
+  <input k-model="name"/>
+  <div>{{name}}</div>
 </body>
 </html>
